[gd_scene load_steps=3 format=3 uid="uid://b44ijk1x4sa02"]

[ext_resource type="Script" path="res://src/main/key_binding/key_binding.gd" id="1_jm4oq"]
[ext_resource type="PackedScene" uid="uid://bsl2ad1604bt2" path="res://src/tests/test_controls.tscn" id="2_fjbic"]

[node name="KeyBinding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jm4oq")
test_controls = ExtResource("2_fjbic")

[node name="ButtonsPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -81.0
offset_right = 105.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ButtonsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="GridContainer" type="GridContainer" parent="ButtonsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 2

[node name="ButtonUILeft" type="Button" parent="ButtonsPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Left"
metadata/command = "ui_left"

[node name="LabelLeft" type="Label" parent="ButtonsPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Left"

[node name="ButtonUIRight" type="Button" parent="ButtonsPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Right"
metadata/command = "ui_right"

[node name="LabelRight" type="Label" parent="ButtonsPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Right"

[node name="InfoPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_top = 100.0
offset_right = 166.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Info" type="Label" parent="InfoPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Press any key or mouse button to assign"

[node name="ButtonTest" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -137.0
offset_right = 54.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
text = "Test controls"

[node name="TestCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="TestCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="TestControls" parent="TestCanvas" instance=ExtResource("2_fjbic")]
unique_name_in_owner = true

[node name="Label" type="Label" parent="TestCanvas"]
offset_right = 40.0
offset_bottom = 23.0
text = "ok"

[node name="ExitTest" type="Button" parent="TestCanvas"]
unique_name_in_owner = true
offset_left = 750.0
offset_top = 16.0
offset_right = 784.0
offset_bottom = 47.0
mouse_default_cursor_shape = 2
text = "X"
